#36 - refact: SimpleHttpServer.configure alterado o thread pool para um valor fixo de 200 e factory como virtual threads, para evitar consumo excessivo de recursos.